compiler warnings for type safety